RESOLVED FIXED18543
DumpRenderTree gtk freeze
https://bugs.webkit.org/show_bug.cgi?id=18543
Summary DumpRenderTree gtk freeze
Mario Bensi
Reported 2008-04-17 01:40:52 PDT
I test that : WebKitTools/Scripts/run-webkit-tests --gtk Running tests from /home/developer/WebKitGtk/LayoutTests Testing 7882 test cases. css1/basic . css1/basic/class_as_selector.html -> after that I have nothing else.
Attachments
fix freeze on DumpRenderTree Gtk (1.07 KB, patch)
2008-04-17 01:42 PDT, Mario Bensi
no flags
change printf+flush by puts and fputs like window port (1011 bytes, patch)
2008-04-17 06:40 PDT, Mario Bensi
no flags
replace tab by space (1019 bytes, patch)
2008-04-17 06:43 PDT, Mario Bensi
alp: review+
Mario Bensi
Comment 1 2008-04-17 01:42:00 PDT
Created attachment 20618 [details] fix freeze on DumpRenderTree Gtk
Mario Bensi
Comment 2 2008-04-17 06:40:01 PDT
Created attachment 20624 [details] change printf+flush by puts and fputs like window port
Mario Bensi
Comment 3 2008-04-17 06:43:47 PDT
Created attachment 20625 [details] replace tab by space
Alp Toker
Comment 4 2008-04-17 12:27:25 PDT
Comment on attachment 20625 [details] replace tab by space r=me
Alp Toker
Comment 5 2008-04-17 12:28:10 PDT
Landed in r32009. Thanks!
Note You need to log in before you can comment on or make changes to this bug.