2008-04-17  Mario Bensi  <mbensi@pleyo.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18543
        DumpRenderTree gtk freeze

        fix DumpRenderTree gtk freeze

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):


Canonical link: https://commits.webkit.org/25516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32009 268f45cc-cd09-0410-ab3c-d52691b4dbfc